# cppNN2

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  setup.py
docs/: Doxyfile  Makefile  conf.py  python_code.rst
src/cppNN/: __init__.py  bindings.cpp  common.hpp  vectors.cpp  vectors.hpp
tests/: cpp_test.py  math_test.py  test_vectors.cpp
